--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <nav></nav>
+    <nav>
+        leader is in charge
+    </nav>
     <main></main>
   </body>
 </html>
