--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <nav>
         leader is in charge
     </nav>
-    <main></main>
+    <main>
+        this is  fresh main in charge
+        hello 
+        i am making my first project
+    </main>
   </body>
 </html>
